# cloud-music-mcp

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  start_mcp.bat
scripts/: queue_player.py
src/cloud_music_mcp/: __init__.py  __main__.py  api.py  auth.py  main.py  server.py
