[project]
name = "cloud-music-mcp"
version = "0.2.0"
description = "网易云音乐 MCP Server - 不依赖 pyncm 的纯 Python 实现"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "fastmcp>=0.2.0",
    "requests>=2.31.0",
    "qrcode>=7.4.0",
    "Pillow>=10.0.0",
]

[project.scripts]
cloud-music-mcp = "cloud_music_mcp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloud_music_mcp*"]